css/style.css
/* css for blog feed finder */

article.bff-form .container { background: #fefefe; }
article.bff-form .container .entry-content > p {
    padding-left: 28px;
}
article.bff-form .container .credit {
    padding-left: 28px;
    padding-bottom: 16px;
    font-size: 80%;
    opacity: 0.5;
}
#blog-feed-finder {
    /*border: dotted 1px #ccc;*/
    padding: 20px;
    margin: 2em;
    border: 2px #ddd solid;
    border-radius: 6px;
    background-color: #efefef;
    width: auto;
}
#blog-feed-finder a { color: #076A1F; font-weight: bold; }
#blog-feed-finder a.hover { color: #000; }
#blog-feed-finder a.visited { color: #237E39; }
#bff-url { width: 32em; }
.bff-form .button {
    padding: 6px 8px;
    color: #333 !important;
    background-color: #97BB6D;
    border-radius: 5px;
    box-shadow: 2px 2px 10px #AAA;
    text-transform: none;
    text-decoration: none;
}
.bff-form .button:hover {
    color: #000;
    box-shadow: 4px 4px 10px #999;
    text-decoration: none;
}
.bff-form .button:active {
    box-shadow: 0px 0px 10px #999;
    text-decoration: none;
}
.bff-form .button:visited { text-decoration: none; }
#bff-feedback, #bff-feeds {
    margin-top: 0.2em;
    padding: 6px 2px;
    color: blue;
}
#bff-feedback.success { color: green; }
#bff-feedback.failure { color: red; }
#bff-feedback p {
    padding-left: 0px;
    margin-bottom: 8px;
}
#bff-feedback p.neutral { color: blue; }
#bff-feedback p.good { color: green; }
#bff-feedback p.problem { color: red; }
#bff-unauth-notice {
    margin-left: 28px;
    background: #FCD980;
    border: solid 1px #F7BD27;
}
#bff-auth-notice { margin-left: 28px; }
#bff-unauth-notice p, #bff-auth-notice p { padding: 6px; }
#bff-unauth-notice a, #bff-auth-notice a {
    padding: 0;
    margin: 0;
}
#bff-feeds p, #bff-feeds li { color: #333; }
#bff-submit { background: #F7BD27 !important; }
#bff-feeds .button { background-color: #97BB6D; }
.bff-info p { padding: 6px 12px; margin-bottom: 2px; }
.bff-alert-box {
    width: auto;
    margin: 0 28px 0 0px;
    padding: 6px;
    background: #FFF0CB;
    border: solid 1px #F7BD27;
    box-shadow: 4px 4px 10px #ccc;
    border-radius: 5px;
}
.bff-info p.instruction { font-weight: bold; }
#bff-feed-list { margin-bottom: 10px; }
#bff-feed-list p.instruction { margin-bottom: 0px; }
#bff-feed-list ul { list-style-type: none; }
#bff-course-list li { margin-bottom: 6px; }
/* traffic lights */
/*.bff-circle {
    display: block;
    float: left;
    width: 1em;
    height: 1em;
    border-radius: 0.5em;
    color: #fff;
    line-height: 1em;
    background-color: #fff;
}
.bff-good { background-color: green; }
.bff-neutral { background-color: blue; }
.bff-problem { background-color: red; }
*/

#bff-feeds .instruction {
    vertical-align: middle;
    line-height: 32px;
}

.bff-emoji {
    display: inline-block;
    float: left;
    width: 24px;
    height: 24px;
    line-height: 24px;
}
.bff-good { background-image: url(img/emoji-pleased.24x24.png); }
.bff-neutral { background-image: url(img/emoji-neutral.24x24.png); }
.bff-problem { background-image: url(img/emoji-confused.24x24.png); }

.bff-feed {
    display: inline-block;
    float: left;
    width: 32px;
    height: 32px;
    line-height: 32px;
    margin-right: 12px;
}
.bff-rss { background-image: url(img/bff-rss.32x32.png); }
.bff-atom { background-image: url(img/bff-atom.32x32.png); }
.bff-json { background-image: url(img/bff-json.32x32.png); }
.bff-default { background-image: url(img/bff-feed.32x32.png); }

.bff-success {
    font-weight: bold;
    color: #fff;
    padding: 5px;
    background: green;
    border-radius: 5px;
}

.bff-detail {
    display: inline-block;
    width: 16px;
    height: 16px;
    line-height: 16px;
    margin-left: 6px;
    background-image: url(img/help.16x16.png);
    background-repeat: none;
}

/* Mobile changes */
@media only screen and (max-width: 700px) {
    #bff-url {
        width: 20em;
    }
}

